<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="title_activity_signup">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login_app_logo">App logo</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="top_bar_account">Account details</string>
    <string name="top_bar_search">serach</string>
    <string name="top_bar_more">more</string>
    <string name="content_description_more">more</string>
    <string name="content_description_search">"Search Bar"</string>
    <string name="content_description_account">Account Management</string>
    <string name="product_name">Product Name</string>
    <string name="available">Available</string>
    <string name="sku">SKU</string>
    <string name="additional_information">Additional Information</string>
    <string name="summary">Summary</string>
    <string name="sales_information">Sales Information</string>
    <string name="more">More</string>
    <string name="customer">Customer</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="sale">Sale</string>
    <string name="customer_page_two">Customer Page two</string>
    <string name="last_name">Last Name</string>
    <string name="address_line_1"> Line 1</string>
    <string name="home_page_one">Home Page one</string>
    <string name="fab_content_desc" />
    <string name="address_line_2">Line 2</string>
    <string name="first_name">First Name</string>
    <string name="company_name">Company Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="work_number">Work Number</string>
    <string name="post_code">Post code</string>
    <string name="city">City</string>
    <string name="create_a_new_customer">Create a new customer</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="cancel">Cancel</string>
    <string name="submit">submit</string>
    <string name="location_name">Location name</string>
    <string name="no_feature">no feature</string>
    <string name="smart">Smart</string>
    <string name="basic">Basic</string>
    <string name="purchase_information">Purchase Information</string>
    <string name="add_more_information">Add more Information</string>
    <string name="create_a_new_product">Create A New Product</string>
    <string name="categories">Categories</string>
    <string name="see_more">see more</string>
    <string name="product_description">this is a about this product</string>
    <string name="check_stock">check stock </string>
    <string name="category">Category</string>
    <string name="customer_id">Customer id</string>
    <string name="col1">ID</string>
    <string name="col2">First Name</string>
    <string name="col3">Mobile_number</string>
    <string name="col4">Line 1</string>
    <string name="mpn">MPN</string>
    <string name="weight_kg">Weight(Kg)</string>
    <string name="isbn">ISBN</string>
    <string name="brand">Brand</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="l_x_w_x_h">L x W x H (CM)</string>
    <string name="ean">EAN</string>
    <string name="upc">UPC</string>
    <string name="price">Price</string>
    <string name="product_name_x">Product Name*</string>
    <string name="unit_x">Unit*</string>
    <string name="description">Description</string>
    <string name="color">color</string>
    <string name="cost_price">Cost Price</string>
    <string name="selling_price">Selling price</string>
    <string name="create_a_new_product_variant">Create a New Product Variant</string>
    <string-array name="inventory_basic_menu_list">
        <item>All Products</item>
        <item>Top Products</item>
    </string-array>
    <string-array name="customer_basic_menu_list">
        <item>All Customers</item>
        <item>Top Customers</item>
    </string-array>
    <string-array name="customer_menu_feature_list">
        <item>best Customers</item>
        <item>recommended Customers</item>
    </string-array>
</resources>