<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/fragment_sale"
        android:title="@string/sale"
        android:icon="@drawable/ic_sale"
        />
    <item
        android:id="@+id/fragment_inventory"
        android:title="@string/inventory"
        android:icon="@drawable/ic_inventory"
        />

    <item
        android:id="@+id/fragment_customer"
        android:title="@string/customer"
        android:icon="@drawable/ic_customer"
        />
    <item
        android:id="@+id/fragment_more"
        android:title="@string/more"
        android:icon="@drawable/ic_more_horiz"/>



</menu>